Worked until VIII|Finished Unit Test integration

--- a/app/templates/_event.html
+++ b/app/templates/_event.html
@@ -1,6 +1,6 @@
 <table>
     <tr valign="top">
         <td><img src="{{ event.author.avatar(36) }}"></td>
-        <td>{{ event.author.username }} has:<br>{{ event.body }}</td>
+        <td>{{ event.author.username }} has:<br>{{ event.body }} on date: {{ event.day }}.{{ event.month }}.{{ event.year }}</td>
     </tr>
 </table>
