corrected subtemplate name

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,6 +16,6 @@
     </form>
     {% endif %}
     {% for event in events %}
-        {% include '_post.html' %}
+        {% include '_event.html' %}
     {% endfor %}
 {% endblock %}
