--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -11,6 +11,10 @@
         <span style="color: red;">[{{ error }}]</span> {% endfor %}
     </p>
     <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
+    <p>
+        Forgot Your Password?
+        <a href="{{ url_for('reset_password_request') }}">Click to Reset It</a>
+    </p>
     <p>{{ form.submit() }}</p>
 </form>
 <p>New User? <a href="{{ url_for('register') }}">Click to Register!</a></p>
