Added CSS Bootstrap

--- a/app/templates/_event.html
+++ b/app/templates/_event.html
@@ -1,11 +1,15 @@
-<table>
-    <tr valign="top">
-        <td><img src="{{ event.author.avatar(36) }}"></td>
+<table class="table table-hover">
+    <tr>
+        <td width="70px">
+            <a href="{{ url_for('user', username=post.author.username) }}">
+                <img src="{{ event.author.avatar(36) }}">
+            </a>
+        </td>
         <td>
-        <a href="{{ url_for('user', username=event.author.username) }}">
-                    {{ event.author.username }}
-                </a>
-                has:<br>{{ event.body }} on {{ event.date.strftime("%d.%m.%Y") }}
+            <a href="{{ url_for('user', username=event.author.username) }}">
+                {{ event.author.username }}
+            </a>
+            has:<br>{{ event.body }} on {{ event.date.strftime("%d.%m.%Y") }}
         </td>
     </tr>
 </table>
