--- a/app/templates/_event.html
+++ b/app/templates/_event.html
@@ -9,7 +9,7 @@
             <a href="{{ url_for('user', username=event.author.username) }}">
                 {{ event.author.username }}
             </a>
-            created {{ event.body }} date: {{ event.date.strftime("%d.%m.%Y") }} {{ moment(event.timestamp).fromNow() }}:
+            created {{ event.body }} at {{ event.date.strftime("%d.%m.%Y") }} {{ moment(event.timestamp).fromNow() }}:
         </td>
     </tr>
 </table>
